--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "use-react-countries": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
