--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "swiper": "^11.0.5",
-    "use-react-countries": "^1.1.0"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
